--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: white;
   /* bg color */
-  background-color: #EADFB4;
+  background-color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,7 +18,9 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* place-items: center; */
+  /* min-width: 320px; */
   min-height: 100vh;
 }
