--- a/src/components/common/Post/index.scss
+++ b/src/components/common/Post/index.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: cente  ;
+    flex-direction: column;
 
     .post-status{
         width: 80%;
