--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -28,10 +28,30 @@
     margin-right: 10px;
     cursor: pointer;
 
+    .logout-button {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #333;
+        color: #fff;
+        padding: 5px 10px;
+        border-radius: 5px;
+        display: none; // Initially hide the logout button
+    }
+
+    &:hover {
+        .logout-button {
+            display: block; // Show the logout button on hover
+        }
+    }
+    
     @media screen and (max-width: 768px) {
         margin: 10px;
     }
 }
+
+
 
 .icons {
     width: 30%;
