--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -21,17 +21,24 @@
     .timeStamp {
       font-family: Arial, sans-serif;
       font-size: 14px;
-      margin: 10px 0 0 10px;
+      margin: 0px 0 0 10px;
       color: rgba(0, 0, 0, 0.6);
       font-weight: 400;
     }
   
+    .name{
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      margin: 10px 0 0 10px;
+      color: #333;
+      font-weight: 600;
+    }
     .status {
       text-align: left;
       margin: 10px 0 0 10px;
       font-family: Arial, sans-serif;
-      font-size: 16px;
-      font-weight: 600;
+      font-size: 14px;
+      font-weight: 450;
       color: #333;
     }
   
