--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -30,8 +30,10 @@
       font-family: Arial, sans-serif;
       font-size: 16px;
       margin: 10px 0 0 10px;
-      color: #333;
+      color: red;
       font-weight: 600;
+      text-decoration: underline;
+      cursor: pointer;
     }
     .status {
       text-align: left;
