--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -5,7 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     @media screen and (max-width: 768px) {
         flex-direction: column;
         height: auto;
@@ -16,7 +15,7 @@
     width: auto;
     height: 100%;
     margin-left: 10px;
-
+    cursor: pointer;
     @media screen and (max-width: 768px) {
         margin: 10px; 
     }
@@ -28,23 +27,23 @@
     margin-right: 20px;
     cursor: pointer;
 
-    .logout-button {
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: #333;
-        color: #fff;
-        padding: 5px 10px;
-        border-radius: 5px;
-        display: none; // Initially hide the logout button
-    }
+    // .logout-button {
+    //     position: absolute;
+    //     top: 100%;
+    //     left: 50%;
+    //     transform: translateX(-50%);
+    //     background-color: #333;
+    //     color: #fff;
+    //     padding: 5px 10px;
+    //     border-radius: 5px;
+    //     display: none; // Initially hide the logout button
+    // }
 
-    &:hover {
-        .logout-button {
-            display: block; // Show the logout button on hover
-        }
-    }
+    // &:hover {
+    //     .logout-button {
+    //         display: block; // Show the logout button on hover
+    //     }
+    // }
     
     @media screen and (max-width: 768px) {
         margin: 10px;
