--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -20,7 +20,7 @@
           flex-direction: column;
           align-items: flex-start;
           margin-left: 10px;
-
+          margin-top: 9%;
           .company, .college {
               margin: 5px 0;
               font-size: 16px;
