--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -5,8 +5,8 @@
   
   .posts-card,
   .create-post-card {
-    width: 500px;  /* Fixed width for consistent size */
-    max-width: none;  /* Remove max-width for full width within container */
+    width: 600px;  
+    max-width: 270%;
     height: auto;
     background-color: #f0f5f5;
     margin-top: 20px;
