--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -1,91 +1,131 @@
 .profile-card {
-  width: 100%;
-  max-width: 600px;
-  height: auto;
-  background-color: #f9f9f9;
-  margin: 30px auto;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 39%;
+    height: auto;
+    background-color: #f9f9f9;
+    margin: 30px auto;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     
-  .profile-info {
+    .profile-info {
       display: flex;
       justify-content: space-between;
       align-items: center;
       color: rgba(0, 0, 0, 0.9);
       margin-bottom: 15px;
-
-      .right-info {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          margin-left: 10px;
-          margin-top: 9%;
-          .company, .college {
-              margin: 5px 0;
-              font-size: 16px;
-              font-weight: bold;
-          }
-      }
-  }
-
   
-
-  .userName {
+      .website {
+        color: rgb(18, 66, 168);
+        -webkit-link: rgb(18, 66, 168);
+      }
+  
+      .website:link {
+        color: rgb(18, 66, 168);
+      }
+  
+      .right-info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 10px;
+        margin-top: 9%;
+  
+        .company,
+        .college {
+          margin: 5px 0;
+          font-size: 16px;
+          font-weight: bold;
+        }
+      }
+    }
+  
+    .extra-info {
+      color: black;
+      margin-top: 20px;
+      padding-top: 5px;
+      border-top: 1px solid #ccc;
+    }
+  
+    .aboutme,
+    .skills {
+      font-family: Arial, sans-serif;
+      color: rgba(0, 0, 0, 0.9);
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+  
+    .skills-label {
+      font-weight: bold;
+    }
+  
+    .userName {
       font-family: Arial, sans-serif;
       color: rgba(0, 0, 0, 0.9);
       font-weight: 600;
       font-size: 24px;
       margin-bottom: 5px;
-  }
-
-  .userEmail {
+    }
+  
+    .userEmail {
       font-family: Arial, sans-serif;
       color: rgba(0, 0, 0, 0.9);
       font-weight: 600;
       font-size: 18px;
       margin-bottom: 10px;
-  }
-
-  .text {
+    }
+  
+    .text {
       font-family: Arial, sans-serif;
       font-size: 16px;
       color: rgba(0, 0, 0, 0.9);
       line-height: 1.5;
       max-width: 350px;
       margin-top: 10px;
-  }
+    }
+  
     .edit-btn {
-      // position: absolute;
-      // top: 20px;
-      // right: 20px;
-
       button {
-          cursor: pointer;
-          background-color: #4CAF50;
-          color: #fff;
-          border: none;
-          border-radius: 5px;
-          padding: 8px 16px;
-          font-size: 14px;
-          font-weight: bold;
-          transition: background-color 0.3s ease;
-          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-
-          &:hover {
-              background-color: #45a049;
-          }
+        cursor: pointer;
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 16px;
+        font-size: 14px;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+  
+        &:hover {
+          background-color: #45a049;
+        }
       }
+    }
+  
+    @media screen and (max-width: 768px) {
+      .profile-info {
+        flex-direction: column;
+        align-items: flex-start;
+  
+        .right-info {
+          margin-top: 0;
+        }
+      }
+  
+      .extra-info {
+        margin-top: 10px;
+      }
+    }
   }
-}
-
-.post-status-parent {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  .post-status {
+  
+  .post-status-parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  
+    .post-status {
       width: 90%;
       max-width: 500px;
       height: 120px;
@@ -97,26 +137,27 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-
+  
       .create-post {
-          width: 100%;
-          height: 40px;
-          text-align: center;
-          font-family: Arial, sans-serif;
-          color: #fff;
-          font-size: 16px;
-          background-color: #4CAF50;
-          border: none;
-          border-radius: 20px;
-          cursor: pointer;
-          padding: 0 20px;
-          font-weight: bold;
-          transition: background-color 0.3s ease;
-          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-
-          &:hover {
-              background-color: #45a049;
-          }
+        width: 100%;
+        height: 40px;
+        text-align: center;
+        font-family: Arial, sans-serif;
+        color: #fff;
+        font-size: 16px;
+        background-color: #4caf50;
+        border: none;
+        border-radius: 20px;
+        cursor: pointer;
+        padding: 0 20px;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+  
+        &:hover {
+          background-color: #45a049;
+        }
       }
+    }
   }
-}
+  
