--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -1,52 +1,117 @@
-
-.like-container{
+.like-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
     color: purple;
-    padding: 5px 10px;
+    padding: 10px;
     cursor: pointer;
-    margin-bottom: -20px;
 
-    .hr-line{
+    .hr-line {
         margin-top: -20px;
-        hr{
+        hr {
             border: 1px solid orange;
         }
     }
 
-    .likes-inner{
-        margin-top: -20px;
+    .like-comment-common {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+    }
+
+    .likes-comment-inner {
         display: flex;
         align-items: center;
-        .purple{
-            color: purple;
+        color: black;
+
+        svg {
+            margin-right: 5px;
         }
-        .black{
-            color: black;
-        }
-        p{
-            font: Helvetica;
-            font-weight: 600; 
-            color: rgba(0, 0, 0, 0.835);
+
+        p {
+            font-weight: 600;
         }
     }
-    p{
-        font: Helvetica;
-        font-weight: 600; 
-        color: #000000d5;
-        margin-left: 10px;
+
+    .comment-input {
+        width: 100%;
+        height: 40px;
+        background-color: #35374b;
+        border-radius: 20px;
+        padding-left: 20px;
+        color: white;
+        font-size: 16px;
+        margin-top: 10px;
+        border: none;
+        outline: none;
+    }
+
+    .comment-btn {
+        margin-top: 10px;
+        width: 20%;
+        padding: 10px 20px;
+        border-radius: 25px;
+        color: #fff;
+        font-size: 16px;
+        background-color: #51829b;
+        border: none;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover {
+            background-color: #407283;
+        }
+    }
+
+    .comment-preview {
+        background-color: #35374b;
+        border-radius: 10px;
+        color: #fff;
+        padding: 10px;
+        margin-top: 10px;
+        width: 100%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+        .comment-header {
+            display: flex;
+            align-items: center;
+        }
+        
+        .comment-name {
+            font-weight: bold;
+            margin-right: 5px;
+        }
+
+        .dot {
+            margin: 0 5px;
+        }
+
+        .comment-timestamp {
+            margin-left: 5px;
+            font-size: 12px;
+            color: #ccc;
+        }
+
+        p {
+            margin: 5px 0;
+        }
+
+        .comment-text {
+            margin-bottom: 10px;
+        }
+    }
+
+    
+    @media screen and (max-width: 768px) {
+        .comment-btn {
+            width: 40%; 
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        .comment-btn {
+            width: 60%;
+        }
     }
 }
-
-// .like-container{
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     width: 100%;
-//     gap: 10px;
-//     color: #014488;
-//     cursor: pointer;
-//     // margin: 10px 10px 10px 10px;
-// }
