--- a/src/components/common/ProfilePopup/index.scss
+++ b/src/components/common/ProfilePopup/index.scss
@@ -1,31 +1,36 @@
 .popup-card {
-    border: 1px solid #a8a8a8;
-    border-radius: 5px;
-    margin-top: 70%;
-    width: 200px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    background-color: whitesmoke;
-    padding: 20px;
-    .name {
+  border: 1px solid #a8a8a8;
+  border-radius: 5px;
+  position: absolute; 
+  top: 100%; 
+  right: 20px;
+  width: 200px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: whitesmoke;
+  padding: 20px;
+  z-index: 1;
+
+  .name {
       font-size: 16px;
       color: rgba(0, 0, 0, 0.9);
       font-weight: 600;
       text-align: left;
       margin-top: -7px;
-    }
-  
-    .headline {
+  }
+
+  .headline {
       font-size: 14px;
       font-weight: 400;
       color: rgba(0, 0, 0, 0.9);
       margin-top: -15px;
-    }
-    .popup-option {
-      cursor: pointer;
-    }
   }
+
+  .popup-option {
+      cursor: pointer;
+  }
+}
