--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -15,6 +15,14 @@
       color: rgba(0, 0, 0, 0.9);
       margin-bottom: 15px;
   
+      .profile-image{
+        width: 100px;
+        height: 100px;
+        border: 2px solid #737373;
+        padding: 5px;
+        border-radius: 50%;
+      }
+
       .website {
         color: rgb(18, 66, 168);
         -webkit-link: rgb(18, 66, 168);
