--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -16,11 +16,14 @@
       margin-bottom: 15px;
   
       .profile-image{
+        object-fit: contain;
+        margin-top: 10%;
         width: 100px;
         height: 100px;
         border: 2px solid #737373;
         padding: 5px;
         border-radius: 50%;
+        cursor: pointer;
       }
 
       .website {
