Profile Picture in Posts

--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -20,6 +20,14 @@
         width: 100%;
     }
 
+    .purple {
+        color: purple;
+    }
+
+    .black{
+        color: black;
+    }
+
     .likes-comment-inner {
         display: flex;
         align-items: center;
