--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -1,67 +1,82 @@
 /* Styles for post cards */
 .post-container {  /* New container for alignment */
-    display: flex;
+  display: flex;
+}
+
+.user-profile {
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  margin-right: 10px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.post-header {
+  display: flex;
+  align-items: center;
+}
+
+.posts-card,
+.create-post-card {
+  width: 600px;  
+  max-width: 270%;
+  height: auto;
+  background-color: #f0f5f5;
+  margin-top: 20px;
+  border: 2px solid #dbe3e3;
+  border-radius: 10px;
+  padding: 20px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+
+  .timeStamp {
+    font-family: Arial;
+    font-size: 12px;
+    margin-left: auto; 
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: 400;
+    margin-top: 5px; 
   }
-  
-  .posts-card,
-  .create-post-card {
-    width: 600px;  
-    max-width: 270%;
-    height: auto;
-    background-color: #f0f5f5;
-    margin-top: 20px;
-    border: 2px solid #dbe3e3;
-    border-radius: 10px;
-    padding: 20px;
-    padding-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-  
-    .timeStamp {
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      margin: 0px 0 0 10px;
-      color: rgba(0, 0, 0, 0.6);
-      font-weight: 400;
-    }
-  
-    .name{
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      margin: 10px 0 0 10px;
-      color: red;
-      font-weight: 600;
-      text-decoration: underline;
-      cursor: pointer;
-    }
-    .status {
-      text-align: left;
-      margin: 10px 0 0 10px;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      font-weight: 450;
-      color: #333;
-    }
-  
-    .create-post {
-      width: 100%;
-      height: 40px;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      color: #fff;
-      background-color: #4CAF50;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-      margin-bottom: 20px;
-  
-      &:hover {
-        background-color: #45a049;
-      }
+
+  .name {
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 0; 
+  }
+
+  .status {
+    text-align: left;
+    margin: 10px 0 0 10px;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 450;
+    color: #333;  
+  }
+
+  .create-post {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+
+    &:hover {
+      background-color: #45a049;
     }
   }
+}
