Image, Name in the posts

--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -41,6 +41,15 @@
     margin-top: 5px; 
   }
 
+  .headline {
+    font-family: Arial;
+    font-size: 15px;
+    margin-left: auto; 
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: 400;
+    margin-top: 5px; 
+  }
+
   .name {
     font-family: Arial, sans-serif;
     font-size: 18px;
