--- a/src/components/common/Post/index.scss
+++ b/src/components/common/Post/index.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
   
     .post-status {
+
+      
       width: 80%;
       max-width: 500px;
       height: 120px;
@@ -18,6 +20,13 @@
       align-items: center;
       box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
   
+
+      .post-image{
+        width: 100px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+
       .create-post {
         width: 70%; // Adjusted width for responsiveness
         height: 40px;
@@ -37,6 +46,8 @@
         &:hover {
           background-color: #45a049;
         }
+
+        
       }
     }
     
