--- a/src/components/common/ProfileUploadModal/index.scss
+++ b/src/components/common/ProfileUploadModal/index.scss
@@ -1,36 +1,56 @@
+.user-profile-pic {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.post-image {
+  width: 70%;
+  height: 70%;
+  // border-radius: 50%;
+  object-fit: cover;
+}
+
 .image-upload-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upload-btn {
+  cursor: pointer;
+  color: #fff;
+  background-color: #1890ff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+}
+
+.upload-btn:hover {
+  background-color: #40a9ff;
+}
+
+.progress-bar {
+  padding: 7%;
+}
+
+@media screen and (max-width: 768px) {
   .upload-btn {
-    cursor: pointer;
-    color: #fff;
-    background-color: #1890ff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-    margin-top: 20px;
+    margin-top: 10px;
+    font-size: 14px;
+    padding: 8px 16px;
   }
-  
-  .upload-btn:hover {
-    background-color: #40a9ff;
-  }
-  
+
   .progress-bar {
-    padding: 7%;
+    margin-top: 10px;
+    padding: 5%;
   }
-  
-  @media screen and (max-width: 768px) {
-    .upload-btn {
-      margin-top: 10px;
-    }
-  
-    .progress-bar {
-      margin-top: 10px;
-    }
+
+  .post-image {
+    width: 100px;
+    height: 100px;
   }
-  
+}
