--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -62,3 +62,37 @@
 .icon-scss:hover {
     color: #717a71;
 }
+
+.search-results{
+    position: absolute;
+    left: 330px;
+    top: 70px;
+    width: 550px;
+    height: 300px;
+    background-color: black;
+    border-radius: 10px;
+    height: auto;
+    border: 5px solid purple;
+
+    .search-inner{
+        display: flex;
+        // justify-content: space-evenly;
+        gap: 20px;
+        padding: 10px;
+        align-items: center;
+        border-radius: 10px;
+        img{
+            width:60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        .name{
+            font: Helvetica;
+            font-size: 20px;
+        }
+    }
+    .search-inner:hover{
+        background-color: white;
+    }
+}
