--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -1,4 +1,4 @@
-.modal-input{
+.modal-input {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -6,7 +6,37 @@
     border-radius: 5px;
     font-size: 16px;
     box-sizing: border-box;
-    &:focus{
-        outline: none;
+    resize: none;
+  
+    &:focus {
+      outline: none;
     }
-}
+  }
+  
+  .textarea-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .upload-pic {
+    color: rgb(14, 147, 205);
+    cursor: pointer;
+  }
+  
+  .preview-post-image {
+    width: 100%;
+    margin-top: 10px;
+    border-radius: 5px;
+  }
+  
+  .upload-label {
+    cursor: pointer;
+  }
+  
+  .progress-bar {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
