--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -88,7 +88,12 @@
       background-color: #45a049;
     }
   }
-
+  .post-image {
+    width: 100%;
+    margin-top: 10px;
+    border-radius: 5px;
+    object-fit: cover;
+  }
   .post-header{
 
     .action-container{ 
