--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -1,8 +1,9 @@
 .modal-input {
     width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
+    // padding: 10px;
+    // height: 100px;
+    margin-bottom: 50px;
+    // border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
     box-sizing: border-box;
@@ -12,6 +13,16 @@
       outline: none;
     }
   }
+
+  .ql-container.ql-snow, .ql-toolbar.ql-snow{
+
+    border: none !important;
+  }
+  .ql-container.ql-snow{
+    height: 100px;
+    font: Helvetica;
+    font-size: 20px;
+  }
   
   .textarea-container {
     width: 100%;
@@ -20,6 +31,8 @@
   }
   
   .upload-pic {
+    position: absolute;
+    bottom: 30px;
     color: rgb(14, 147, 205);
     cursor: pointer;
   }
