--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -20,6 +20,7 @@
         margin-top: 10%;
         width: 100px;
         height: 100px;
+        object-fit: cover;
         border: 2px solid #737373;
         padding: 5px;
         border-radius: 50%;
