--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -16,16 +16,23 @@
 }
 
 .user-logo {
-    max-width: 100px;
-    height: auto;
-    border-radius: 100%;
+    width: 10%; 
+    max-width: 60px;
+    height: 80%;
+    border-radius: 50%;
     object-fit: cover;
-
-    margin-top: -30px;
-    position: absolute;
-    right: 10px;
     cursor: pointer;
+    position: absolute;
+    top: 50%;
+    right: 2%; 
+    transform: translateY(-50%);
+    transition: transform 0.3s ease;
+    &:hover {
+        transform: translateY(-50%) scale(1.1); 
+    }
 }
+
+
 
 .connect-logo {
     width: auto;
