--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -3,21 +3,21 @@
     border: 2px solid #333;
     border-radius: 10px;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
-    justify-content: space-between;
+    gap: 20px;
+    cursor: pointer;
 
     img {
         width: 100px;
         height: 100px;
         border-radius: 50%;
         object-fit: cover;
-        margin-bottom: 20px;
     }
 
     .user-details {
-        text-align: center;
+        text-align: left;
     }
 
     .name {
@@ -33,7 +33,6 @@
 
     .connect-button {
         background-color: #4caf50;
-        width: 70%;
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -44,5 +43,20 @@
         &:hover {
             background-color: #45a055;
         }
+    }
+
+    @media (max-width: 768px) {
+        grid-template-columns: 1fr;
+        text-align: center;
+
+        img {
+            width: 80px;
+            height: 80px;
+            margin-bottom: 10px;
+        }
+    }
+
+    &:hover {
+        background-color: #cacaca;
     }
 }
