--- a/src/Scss/MessagesLayout.scss
+++ b/src/Scss/MessagesLayout.scss
@@ -1,6 +1,11 @@
 .messages-layout {
-    background-color: white;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    gap: 10px;
-}
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+    padding: 20px;
+    
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+  }
+  
