--- a/src/Scss/ResumeAnalyzerComponent.scss
+++ b/src/Scss/ResumeAnalyzerComponent.scss
@@ -39,6 +39,27 @@
       &:hover {
         background-color: #218838;
       }
+
+    }
+    .progress-container {
+      width: 100%;
+      height: 20px;
+      background-color: #f3f3f3;
+      border-radius: 10px;
+      margin-top: 10px;
+      overflow: hidden;
+    }
+  
+    .progress-bar {
+      height: 100%;
+      background-color: #007bff;
+      border-radius: 10px;
+      transition: width 0.3s ease;
+    }
+  
+    .progress-percentage {
+      margin-top: 5px;
+      font-size: 14px;
     }
   }
   
