--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -53,4 +53,18 @@
             background-color: #45a055;
         }
     }
+    .unfollow-button {
+        background-color: rgb(255, 166, 0);
+        width: 70%;
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        &:hover {
+            background-color: rgb(192, 125, 0);
+        }
+    }
 }
