--- a/src/components/common/Post/index.scss
+++ b/src/components/common/Post/index.scss
@@ -19,11 +19,13 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 
     .profile-image {
+      background-color: #333;
       width: 25%; 
       height: 70%;
       border-radius: 50%; 
       overflow: hidden;
-      margin-right: 20px; 
+      margin-right: 5%; 
+      margin-left: 5%;
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); 
       // object-fit: contain;
     }
