--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -16,6 +16,7 @@
       margin-bottom: 15px;
   
       .profile-image{
+        background-color:#333;
         object-fit: contain;
         margin-top: 10%;
         width: 100px;
