--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -1,6 +1,6 @@
 .profile-card {
     width: 100%;
-    max-width: 39%;
+    max-width: 40%;
     height: auto;
     background-color: #f9f9f9;
     margin: 30px auto;
@@ -42,8 +42,8 @@
             flex-direction: column;
             align-items: flex-start;
             margin-left: 10px;
-            margin-top: 9%;
-
+            margin-top: 20%;
+        
             .company,
             .college {
                 margin: 5px 0;
@@ -74,6 +74,7 @@
                 cursor: pointer;
                 font-weight: 600;
                 transition: background-color 0.3s ease;
+                margin-bottom: 10px; 
                 &:hover {
                     background-color: rgb(192, 125, 0);
                 }
@@ -93,6 +94,7 @@
                 }
             }
         }
+        
     }
 
     .extra-info {
