--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -8,63 +8,61 @@
     font-size: 16px;
     box-sizing: border-box;
     resize: none;
-  
+
     &:focus {
-      outline: none;
+        outline: none;
     }
-  }
+}
 
-  .ql-container.ql-snow, .ql-toolbar.ql-snow{
-
+.ql-container.ql-snow,
+.ql-toolbar.ql-snow {
     border: none !important;
-  }
-  .ql-container.ql-snow{
+}
+.ql-container.ql-snow {
     height: 100px;
     font: Helvetica;
     font-size: 20px;
-  }
-  
-  .textarea-container {
+}
+
+.textarea-container {
     width: 100%;
     display: flex;
     flex-direction: column;
-  }
-  
-  .upload-pic {
+}
+
+.upload-pic {
     position: absolute;
     bottom: 30px;
     color: rgb(14, 147, 205);
     cursor: pointer;
-  }
-  
-  .preview-post-image {
+}
+
+.preview-post-image {
     width: 100%;
     margin-top: 10px;
-    max-width: 400px; 
+    max-width: 400px;
     border-radius: 5px;
-  }
-  .image-container {
+}
+.image-container {
     position: relative;
     width: 100%;
     max-width: 400px;
-    margin: 0 auto; 
-    .remove-button{
-      position: absolute;
-      top: -7%;
-      right: 0;
-      color: red;
-      cursor: pointer;
-
+    margin: 0 auto;
+    .remove-button {
+        position: absolute;
+        top: -7%;
+        right: 0;
+        color: red;
+        cursor: pointer;
     }
 }
 
-  .upload-label {
+.upload-label {
     cursor: pointer;
-  }
-  
-  .progress-bar {
+}
+
+.progress-bar {
     display: flex;
     justify-content: center;
     margin-top: 10px;
-  }
-  
+}
