--- a/src/components/common/ProfileEdit/index.scss
+++ b/src/components/common/ProfileEdit/index.scss
@@ -1,110 +1,110 @@
 .profileEdit {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  max-width: 600px;
-  margin: 30px auto;
-  background-color: whitesmoke;
-  border-radius: 10px;
-  position: relative;
-  padding: 20px;
-
-  .edit-btn {
-    button {
-      cursor: pointer;
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      padding: 8px 16px;
-      font-size: 14px;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-
-      &:hover {
-        background-color: #45a049;
-      }
-    }
-  }
-
-  .profileEditInputs {
-    margin-top: 30px;
-    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
-
-    label {
-      color: black;
-      font-family: system-ui;
-      margin-bottom: 5px;
-      padding-left: 10px;
-    }
-
-    input,
-    textArea {
-      width: 100%;
-      height: 50px;
-      border-radius: 5px;
-      border: 1px solid gray;
-      margin: 5px 0;
-      padding: 0 10px;
-      box-sizing: border-box;
-    }
-
-    textArea {
-      color: rgb(255, 252, 252);
-      font-family: system-ui;
-      font-size: 14px;
-      height: 100px;
-      resize: vertical;
-      padding: 10px;
-    }
-  }
-
-  .save-btn {
-    display: inline-block;
-    padding: 0.5em 1em;
-    border-radius: 5em;
-    color: #fff;
-    font-size: 1em;
-    max-width: 20%;
-    letter-spacing: 0.15em;
-    transition: all 0.3s;
+    width: 90%;
+    max-width: 600px;
+    margin: 30px auto;
+    background-color: whitesmoke;
+    border-radius: 10px;
     position: relative;
-    overflow: hidden;
-    z-index: 1;
+    padding: 20px;
 
-    &:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #0cf;
-      border-radius: 10em;
-      z-index: -2;
+    .edit-btn {
+        button {
+            cursor: pointer;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 16px;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+            &:hover {
+                background-color: #45a049;
+            }
+        }
     }
 
-    &:before {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0%;
-      height: 100%;
-      background-color: darken(#0cf, 15%);
-      transition: all 0.3s;
-      border-radius: 10em;
-      z-index: -1;
+    .profileEditInputs {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        display: flex;
+        flex-direction: column;
+
+        label {
+            color: black;
+            font-family: system-ui;
+            margin-bottom: 5px;
+            padding-left: 10px;
+        }
+
+        input,
+        textArea {
+            width: 100%;
+            height: 50px;
+            border-radius: 5px;
+            border: 1px solid gray;
+            margin: 5px 0;
+            padding: 0 10px;
+            box-sizing: border-box;
+        }
+
+        textArea {
+            color: rgb(255, 252, 252);
+            font-family: system-ui;
+            font-size: 14px;
+            height: 100px;
+            resize: vertical;
+            padding: 10px;
+        }
     }
 
-    &:hover {
-      color: #fff;
-      &:before {
-        width: 100%;
-      }
+    .save-btn {
+        display: inline-block;
+        padding: 0.5em 1em;
+        border-radius: 5em;
+        color: #fff;
+        font-size: 1em;
+        max-width: 20%;
+        letter-spacing: 0.15em;
+        transition: all 0.3s;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+
+        &:after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #0cf;
+            border-radius: 10em;
+            z-index: -2;
+        }
+
+        &:before {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0%;
+            height: 100%;
+            background-color: darken(#0cf, 15%);
+            transition: all 0.3s;
+            border-radius: 10em;
+            z-index: -1;
+        }
+
+        &:hover {
+            color: #fff;
+            &:before {
+                width: 100%;
+            }
+        }
     }
-  }
 }
