--- a/src/components/common/Search/index.scss
+++ b/src/components/common/Search/index.scss
@@ -1,39 +1,35 @@
-.search-main { 
+.search-main {
     display: flex;
     // flex-direction: row;
     align-items: center;
-    width:40%;
+    width: 40%;
     margin-left: 20px;
-    input{
+    input {
         font: Helvetica;
         font-size: 15px;
-        width:100%;
-        height:30px;
-        background-color:
-        whitesmoke;
+        width: 100%;
+        height: 30px;
+        background-color: whitesmoke;
         border: 5px solid orange;
-        border-radius: 10px; 
-        color:#212121;
+        border-radius: 10px;
+        color: #212121;
         padding-left: 10px;
         outline: none;
     }
-    input:focus{
+    input:focus {
         border: 5px solid purple;
-    } 
-    ::placeholder{
+    }
+    ::placeholder {
         font: Helvetica;
         font-size: 15px;
     }
 
-    .close-icon{
+    .close-icon {
         margin-left: -30px;
         color: orange;
         cursor: pointer;
-        
     }
-    .close-icon:hover{
+    .close-icon:hover {
         outline: auto;
     }
-
-    
 }
