--- a/src/index.scss
+++ b/src/index.scss
@@ -1,45 +1,43 @@
-@import url('./components/common/Loader/index.scss');
+@import url("./components/common/Loader/index.scss");
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: white;
-  /* bg color */
-  background-color: rgba(255, 255, 255, 0.87);
+    color-scheme: light dark;
+    color: white;
+    /* bg color */
+    background-color: rgba(255, 255, 255, 0.87);
 
-  // font-synthesis: none;
-  // text-rendering: optimizeLegibility;
-  // -webkit-font-smoothing: antialiased;
-  // -moz-osx-font-smoothing: grayscale;
+    // font-synthesis: none;
+    // text-rendering: optimizeLegibility;
+    // -webkit-font-smoothing: antialiased;
+    // -moz-osx-font-smoothing: grayscale;
 }
-
 
 body {
-  margin: 0;
-  display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* place-items: center; */
-  /* min-width: 320px; */
-  min-height: 100vh;
+    margin: 0;
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* place-items: center; */
+    /* min-width: 320px; */
+    min-height: 100vh;
 }
 
-
 .common-input {
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 2px solid transparent; // Set initial border to transparent
-  border-radius: 5px;
-  background-color: #1f1f1f;
-  color: white;
-  font-size: 1em;
-  &:focus {
-    outline: none;
-    animation: blinkBorder 1s infinite alternate; // Apply animation only when focused
-    border-color: #0cf; // Change border color on focus
-  }
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 2px solid transparent; // Set initial border to transparent
+    border-radius: 5px;
+    background-color: #1f1f1f;
+    color: white;
+    font-size: 1em;
+    &:focus {
+        outline: none;
+        animation: blinkBorder 1s infinite alternate; // Apply animation only when focused
+        border-color: #0cf; // Change border color on focus
+    }
 }
