--- a/src/components/common/Footer/index.scss
+++ b/src/components/common/Footer/index.scss
@@ -1,5 +1,8 @@
+$first: #0C0C0F;
+$second: #31363F;
+$third: #af52fe;
+
 html {
-    height: 100%;
     margin: 0;
   }
   
@@ -15,11 +18,12 @@ html {
   }
   
   .footer {
-    background-color: #5c6081;
+    background-color: $third;
     color: white;
     text-align: center;
     padding: 10px 0;
     width: 100%;
+    height: 2.5%;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     bottom: 0;
