--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 $first: #0C0C0F;
 $second: #31363F;
-$third: #af52fe;
+$third: #9446cb;
 
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
