--- a/src/components/common/Navbar/index.scss
+++ b/src/components/common/Navbar/index.scss
@@ -1,9 +1,9 @@
 $first: #0C0C0F;
 $second: #31363F;
-$third: #af52fe;
+$third: #9446cb;
 
 .navbar-master {
-    width: 99%;
+    width: 98.5%;
     height: 10vh;
     background-color: #0c0c0f;
     display: flex;
@@ -43,6 +43,7 @@ $third: #af52fe;
 
 .user-logo:hover {
     background-color: lighten($third , 1%);
+    padding: 0.25%;
 }
 
 
@@ -66,7 +67,7 @@ $third: #af52fe;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: -230px;
+    margin-left: -16%;
 
     @media screen and (max-width: 768px) {
         justify-content: space-around;
