--- a/src/components/common/Search/index.scss
+++ b/src/components/common/Search/index.scss
@@ -1,23 +1,32 @@
+$first: #0C0C0F;
+$second: #31363F;
+$third: #af52fe;
+
 .search-main {
     display: flex;
-    // flex-direction: row;
     align-items: center;
-    width: 40%;
-    margin-left: 20px;
+    justify-content: center;
+    width: 35%; 
+    max-width: 400px;
+    margin: 0 auto; 
+    margin-left: 8%;
+    margin-right: 25%;
     input {
         font: Helvetica;
         font-size: 15px;
         width: 100%;
-        height: 30px;
+        height: 40px; 
         background-color: whitesmoke;
-        border: 5px solid orange;
-        border-radius: 10px;
+        border: 2px solid transparent; 
+        border-radius: 20px; 
         color: #212121;
-        padding-left: 10px;
+        padding: 0 15px; 
         outline: none;
+        transition: border-color 0.3s;
     }
     input:focus {
-        border: 5px solid purple;
+        border-color: $third; 
+        animation: blinkBorder 1s infinite alternate; 
     }
     ::placeholder {
         font: Helvetica;
@@ -30,6 +39,6 @@
         cursor: pointer;
     }
     .close-icon:hover {
-        outline: auto;
+        color: darkorange; 
     }
 }
