--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,5 @@
 @import url("./components/common/Loader/index.scss");
-
-$first: #0C0C0F;
-$second: #31363F;
-$third: #9446cb;
+@import "./GeneralTheme.scss";
 
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
