--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -1,8 +1,10 @@
+@import "../../../GeneralTheme.scss" ;
+
 .like-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    color: purple;
+    color: $third;
     padding: 10px;
     cursor: pointer;
 
@@ -21,17 +23,17 @@
     }
 
     .purple {
-        color: purple;
+        color: $third;
     }
 
     .black {
-        color: black;
+        color: $first;
     }
 
     .likes-comment-inner {
         display: flex;
         align-items: center;
-        color: black;
+        color: $first;
 
         svg {
             margin-right: 5px;
@@ -45,10 +47,10 @@
     .comment-input {
         width: 100%;
         height: 40px;
-        background-color: #35374b;
+        background-color: $second;
         border-radius: 20px;
         padding-left: 20px;
-        color: white;
+        color: whitesmoke;
         font-size: 16px;
         margin-top: 10px;
         border: none;
@@ -62,18 +64,18 @@
         border-radius: 25px;
         color: #fff;
         font-size: 16px;
-        background-color: #51829b;
+        background-color: $third;
         border: none;
         cursor: pointer;
         transition: all 0.3s ease;
 
         &:hover {
-            background-color: #407283;
+            background-color: darken($third, 15%);
         }
     }
 
     .comment-preview {
-        background-color: #35374b;
+        background-color: $second;
         border-radius: 10px;
         color: #fff;
         padding: 10px;
