--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -1,7 +1,6 @@
-/* Styles for post cards */
 .post-container {
-    /* New container for alignment */
     display: flex;
+    // flex-direction: column;
 }
 
 .user-profile {
@@ -18,10 +17,16 @@
     align-items: center;
 }
 
+@media (max-width: 480px) {
+    .post-header {
+        flex-direction: column;
+    }
+}
+
 .posts-card,
 .create-post-card {
-    width: 600px;
-    max-width: 270%;
+    width: 100%;
+    max-width: 600px;
     height: auto;
     background-color: #f0f5f5;
     margin-top: 20px;
@@ -32,88 +37,75 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
 
-    .timeStamp {
-        font-family: Arial;
-        font-size: 12px;
-        margin-left: auto;
-        color: rgba(0, 0, 0, 0.6);
-        font-weight: 400;
-        margin-top: 5px;
-    }
+.posts-card .timeStamp,
+.posts-card .headline,
+.posts-card .name,
+.posts-card .status {
+    font-family: Arial, sans-serif;
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: 400;
+    margin-top: 5px;
+    margin-left: auto;
+}
 
-    .headline {
-        font-family: Arial;
-        font-size: 15px;
-        margin-left: auto;
-        color: rgba(0, 0, 0, 0.6);
-        font-weight: 400;
-        margin-top: 5px;
-    }
+.posts-card .name {
+    font-size: 18px;
+    color: black;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 0;
+}
 
-    .name {
-        font-family: Arial, sans-serif;
-        font-size: 18px;
-        color: black;
-        font-weight: 600;
-        cursor: pointer;
-        margin: 0;
-    }
+.posts-card .status {
+    text-align: left;
+    margin: 10px 0 0 10px;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 450;
+    color: #333;
+}
 
-    .status {
-        text-align: left;
-        margin: 10px 0 0 10px;
-        font-family: Arial, sans-serif;
-        font-size: 18px;
-        font-weight: 450;
-        color: #333;
-    }
 
-    .create-post {
-        width: 100%;
-        height: 40px;
-        text-align: center;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        color: #fff;
-        background-color: #4caf50;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        font-weight: bold;
-        transition: background-color 0.3s ease;
-        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-        margin-bottom: 20px;
+.posts-card .post-image {
+    width: 100%;
+    margin-top: 10px;
+    border-radius: 5px;
+    object-fit: cover;
+    cursor: pointer;
+}
 
-        &:hover {
-            background-color: #45a049;
-        }
-    }
-    .post-image {
-        width: 100%;
+.action-container {
+    margin-left: auto; 
+    display: flex;
+    
+}
+
+
+.posts-card .action-container {
+    position: relative;
+    right: 20px;
+    top: 10px;
+    display: flex;
+}
+
+.posts-card .action-container .action-icon {
+    color: #474747;
+    padding: 10px;
+}
+
+.posts-card .action-container .action-icon:hover {
+    color: #000000;
+    background-color: #b7b7b7;
+    border-radius: 50%;
+}
+
+@media (max-width: 480px) {
+    .posts-card .action-container {
+        position: static;
         margin-top: 10px;
-        border-radius: 5px;
-        object-fit: cover;
-        cursor: pointer;
-    }
-    .post-header {
-        .action-container {
-            right: 20px;
-            cursor: pointer;
-            display: flex;
-            top: 10px;
-            .action-icon {
-                color: #474747;
-                padding: 10px;
-            }
-        }
-
-        .action-icon:hover {
-            color: #000000;
-            background-color: #b7b7b7;
-            padding: 10px;
-            border-radius: 50%;
-        }
+        right: 0;
     }
 }
 
@@ -121,5 +113,4 @@
     cursor: pointer;
     margin-top: 30px;
     width: 100%;
-    // margin-top:50px;
 }
