--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -1,3 +1,5 @@
+@import "../../../GeneralTheme.scss";
+
 .profile-card {
     width: 100%;
     max-width: 40%;
@@ -160,7 +162,7 @@
     }
 
     .delete-account-button {
-        background-color: #f44336; /* Red color for delete button */
+        background-color: #f44336; 
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -168,10 +170,10 @@
         cursor: pointer;
         font-weight: 600;
         transition: background-color 0.3s ease;
-        margin-top: 10px; /* Add margin to separate from other buttons */
+        margin-top: 10px; 
 
         &:hover {
-            background-color: #d32f2f; /* Darker red on hover */
+            background-color: #d32f2f;
         }
     }
 
@@ -191,44 +193,44 @@
     }
 }
 
-.post-status-parent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+// .post-status-parent {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
 
-    .post-status {
-        width: 90%;
-        max-width: 500px;
-        height: 120px;
-        background-color: #f0f5f5;
-        margin-top: 20px;
-        border: 2px solid #dbe3e3;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+//     .post-status {
+//         width: 90%;
+//         max-width: 500px;
+//         height: 120px;
+//         background-color: #f0f5f5;
+//         margin-top: 20px;
+//         border: 2px solid #dbe3e3;
+//         border-radius: 10px;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 
-        .create-post {
-            width: 100%;
-            height: 40px;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            color: #fff;
-            font-size: 16px;
-            background-color: #4caf50;
-            border: none;
-            border-radius: 20px;
-            cursor: pointer;
-            padding: 0 20px;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+//         .create-post {
+//             width: 100%;
+//             height: 40px;
+//             text-align: center;
+//             font-family: Arial, sans-serif;
+//             color: #fff;
+//             font-size: 16px;
+//             background-color: $third;
+//             border: none;
+//             border-radius: 20px;
+//             cursor: pointer;
+//             padding: 0 20px;
+//             font-weight: bold;
+//             transition: background-color 0.3s ease;
+//             box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 
-            &:hover {
-                background-color: #45a049;
-            }
-        }
-    }
-}
+//             &:hover {
+//                 background-color: darken($color: $third, $amount: 15%);
+//             }
+//         }
+//     }
+// }
