--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -122,7 +122,10 @@
     .buttons{
             .connect-button,
             .unfollow-button,
-            .message-button {
+            .message-button ,
+            .followers-button,
+            .following-button
+            {
                 // background-color: #4caf50;
                 // background-color: rgb(255, 166, 0);
                 background-color: $third;
@@ -134,12 +137,16 @@
                 font-weight: 600;
                 transition: background-color 0.3s ease;
                 margin-right: 2%;
+                
                 &:hover {
                     background-color: darken( $third, 15%);
                 }
 
                 @media screen and (max-width: 768px) {
                     padding: 6px 12px;
+                }
+                @media screen and (max-width: 462px) {
+                    margin-bottom: 3%;
                 }
             }
             .unfollow-button {
@@ -159,6 +166,7 @@
                 font-weight: 600;
                 transition: background-color 0.3s ease;
                 margin-top: 10px; 
+                margin-bottom: 10px; 
         
                 &:hover {
                     background-color: #d32f2f;
