--- a/src/components/common/FollowersModal/index.scss
+++ b/src/components/common/FollowersModal/index.scss
@@ -1,6 +1,5 @@
 @import "../../../GeneralTheme.scss";
 
-
 .followers-inner {
     display: flex;
     gap: 20px;
@@ -9,14 +8,20 @@
     cursor: pointer;
 
     .name {
-        font-size: calc(1em - 0.15vw);
+        font-size: calc(14px + 0.2vw); 
+        color: #333; 
+        font-weight: bold; 
     }
 
     img {
         width: 40px;
+        height: 40px; 
+        border-radius: 50%; 
+        object-fit: cover; 
+        background-color: #333;
     }
 }
 
 .followers-inner:hover {
-    background-color: lighten($first, 10%);
+    background-color: rgb(205, 205, 205);
 }
