--- a/src/Scss/MessengersComponent.scss
+++ b/src/Scss/MessengersComponent.scss
@@ -132,7 +132,8 @@
 /* MessengersComponent.scss */
 
 .MessengersComponent {
-    height: 80vh; /* Occupy full height of the viewport */
+    
+    height: 35vw; /* Occupy full height of the viewport */
     overflow-y: auto; /* Enable vertical scrolling */
     padding: 20px;
     background-color: #f8f9fa;
